force-app/main/default/objects/BMCServiceDesk__Incident_Manifest__c/fields/BMCServiceDesk__FKProcess_Template__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKProcess_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Template</label>
    <referenceTo>BMCServiceDesk__SRM_ProcessTemplate__c</referenceTo>
    <relationshipLabel>Incident Manifests</relationshipLabel>
    <relationshipName>Incident_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>