force-app/main/default/objects/BMCServiceDesk__Incident_Manifest__c/fields/BMCServiceDesk__FKTask__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>BMCServiceDesk__Task__c</referenceTo>
    <relationshipLabel>Incident Manifests</relationshipLabel>
    <relationshipName>Incident_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>