force-app/main/default/objects/BMCServiceDesk__Incident_Manifest__c/fields/BMCServiceDesk__FKTemplate_Linking__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKTemplate_Linking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FKTemplate Linking</label>
    <referenceTo>BMCServiceDesk__SYSTemplateLink__c</referenceTo>
    <relationshipLabel>Incident Manifests</relationshipLabel>
    <relationshipName>Incident_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>